compiler/test/type_check/bad_array2.c2po
INPUT
    arr1: int[3];
    arr2: int[5];

FTSPEC
    arr1 >= arr2;
    arr1 == 1;
    arr1 < arr2[5..2];